--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar.projectKey=softwareone-platform_swo-extension-playground
+sonar.projectKey=softwareone-platform_mpt-tool
 sonar.organization=softwareone-mpt-github
 
 sonar.language=py
 
-sonar.sources=swo_playground
+sonar.sources=mpt_tool
 sonar.tests=tests
-sonar.inclusions=swo_playground/**
-sonar.exclusions=tests/**, swo_playground/settings.py
+sonar.inclusions=mpt_tool/**
+sonar.exclusions=tests/**
 
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=coverage.xml
-sonar.python.version=3
+sonar.python.version=3.12
