--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,18 +24,18 @@ jobs:
       run: echo  "VERSION=${GITHUB_REF/refs\/tags\//}" >> "$GITHUB_OUTPUT"
 
     - name: "Build and push image"
-      uses: azure/docker-login@v1
+      uses: azure/docker-login@v2
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build -f prod.Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/swo-extensions-playground:${{ steps.get_version.outputs.VERSION }} .
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/swo-extensions-playground:${{ steps.get_version.outputs.VERSION }}
+        docker build -f prod.Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/mpt-tool:${{ steps.get_version.outputs.VERSION }} .
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/mpt-tool:${{ steps.get_version.outputs.VERSION }}
 
   dtrack:
-    uses: softwareone-platform/ops-template/.github/workflows/dependency-track-python-uv.yml@v1
+    uses: softwareone-platform/ops-template/.github/workflows/dependency-track-python-uv.yml@v2
     with:
-      projectName: 'swo-extension-playground'
+      projectName: 'mpt-tool'
     secrets:
       DEPENDENCYTRACK_APIKEY: ${{ secrets.DEPENDENCYTRACK_APIKEY }}
