--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,70 +1,36 @@
 [project]
-name = "swo-playground-extension"
+name = "mpt-tool"
 version = "0.0.0"
-description = "Playground for SWO Marketplace Platform"
+description = "Migration tool for extensions"
 authors = [{ name = "SoftwareOne AG" }]
 requires-python = ">=3.12,<4"
 readme = "README.md"
 license = {text = "Apache-2.0 license"}
 
-dependencies = [
-    "django==4.2.*",
-    "mpt-extension-sdk==5.15.*",
-]
-
-[project.entry-points."swo.mpt.ext"]
-app_config = "swo_playground.extension:ExtensionConfig"
+dependencies = []
 
 [dependency-groups]
 dev = [
   "flake8>=7.3.0",
   "flake8-aaa>=0.17.2",
   "flake8-pyproject>=1.2.3",
-  "freezegun==1.5.*",
   "ipdb==0.13.*",
   "ipython==9.*",
-  "mypy==1.15.*",
-  "pre-commit==4.2.*",
-  "pytest==8.3.*",
-  "pytest-asyncio==1.1.*",
-  "pytest-cov==6.1.*",
-  "pytest-deadfixtures==2.2.*",
-  "pytest-django==4.8.*",
-  "pytest-mock==3.14.*",
-  "pytest-randomly==3.16.*",
-  "pytest-xdist==3.6.*",
-  "responses==0.25.*",
-  "ruff==0.12.11",  # force ruff version to have same formatting everywhere
-  "typing-extensions==4.14.*",
-  "wemake-python-styleguide==1.3.*",
+  "mypy==1.19.*",
+  "pre-commit==4.5.*",
+  "pytest==9.0.*",
+  "pytest-cov==7.0.*",
+  "pytest-deadfixtures==3.0.*",
+  "pytest-mock==3.15.*",
+  "ruff==0.14.*",
+  "wemake-python-styleguide==1.5.*",
 ]
-runtime = [
-    "azure-monitor-opentelemetry-exporter==1.0.0b25",
-    "debugpy==1.8.*",
-    "gunicorn==23.0.*",
-    "opentelemetry-api==1.30.*",
-    "opentelemetry-instrumentation-django==0.51b0",
-    "opentelemetry-instrumentation-logging==0.51b0",
-    "opentelemetry-instrumentation-requests==0.51b0",
-    "opentelemetry-sdk==1.30.*",
-    "watchfiles==0.21.*",
-]
-
-[tool.hatch.build.targets.sdist]
-include = ["swo_playground"]
-
-[tool.hatch.build.targets.wheel]
-include = ["swo_playground"]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+runtime = []
 
 [tool.pytest.ini_options]
 testpaths = "tests"
 pythonpath = "."
-addopts = "--cov=swo_playground --cov-report=term-missing --cov-report=xml --import-mode=importlib"
-DJANGO_SETTINGS_MODULE = "tests.django.settings"
+addopts = "--cov=mpt_tool --cov-report=term-missing --cov-report=xml --import-mode=importlib"
 log_cli = false
 filterwarnings = []
 
@@ -73,7 +39,6 @@ branch = true
 relative_files = true
 omit = [
   "__init__.py",
-  "swo_playground/settings.py"
 ]
 
 [tool.flake8]
@@ -97,10 +62,7 @@ max-line-length = 100
 select = ["AAA", "E999", "WPS"]
 show-source = true
 statistics = false
-per-file-ignores = [
-  "tests/django/settings.py: WPS407",
-  "settings.py: WPS407",
-]
+per-file-ignores = []
 
 [tool.ruff]
 preview = true
@@ -179,15 +141,22 @@ ignore = [
 external = [ "AAA", "WPS" ]
 
 # Plugin configs:
-flake8-import-conventions.banned-from = [ "ast", "datetime" ]
-flake8-import-conventions.aliases = { datetime = "dt" }
-flake8-quotes.inline-quotes = "double"
-mccabe.max-complexity = 6
-pydocstyle.convention = "google"
+[tool.ruff.lint.flake8-import-conventions]
+banned-from = ["ast", "datetime"]
+aliases = { datetime = "dt" }
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "double"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 6
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*.py" = [
-  "D103", # missing docstring in public function
+  "D103", # missing docstring in a public function
   "S101", # asserts
   "S105", # hardcoded passwords
   "S404", # subprocess calls are for tests
@@ -195,24 +164,5 @@ pydocstyle.convention = "google"
   "S607", # partial executable paths
 ]
 
-[tool.ruff.lint.isort]
-known-third-party = ["swo"]
-
 [tool.mypy]
 warn_no_return = false
-
-[[tool.mypy.overrides]]
-module = "django.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "pyfiglet.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "gunicorn.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "pymsteams.*"
-ignore_missing_imports = true
