--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ requires-python = ">=3.12,<4"
 readme = "README.md"
 license = {text = "Apache-2.0 license"}
 
-dependencies = []
+dependencies = [
+  "typer>=0.9.0",
+]
+
+[project.scripts]
+mpt-tool = "mpt_tool.app:main"
 
 [dependency-groups]
 dev = [
@@ -26,6 +31,15 @@ dev = [
   "wemake-python-styleguide==1.5.*",
 ]
 runtime = []
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build]
+include = [
+  "mpt_tool/**"
+]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
@@ -166,3 +180,4 @@ convention = "google"
 
 [tool.mypy]
 warn_no_return = false
+exclude = ["tests"]
